--- a/CanYou3/Base.lproj/Main.storyboard
+++ b/CanYou3/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Can You ?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pxz-IM-frK">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Can You ?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pxz-IM-frK" customClass="LTMorphingLabel" customModule="LTMorphingLabel">
                                 <rect key="frame" x="16" y="318.5" width="343" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <nil key="textColor"/>
@@ -43,6 +43,48 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+        </scene>
+        <!--Base View Controller-->
+        <scene sceneID="lB0-ry-DS1">
+            <objects>
+                <viewController storyboardIdentifier="WelcomeViewController" id="DKh-Uz-PW7" customClass="BaseViewController" customModule="CanYou3" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="oF3-x4-nvL"/>
+                        <viewControllerLayoutGuide type="bottom" id="XSF-z5-ZHo"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="yja-W3-dGF">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WFt-yb-ihK">
+                                <rect key="frame" x="16" y="20" width="343" height="647"/>
+                                <string key="text">금연이라는 어려운 결심을 하셨군요!
+시작이 반이라는 말이 있잖아요?</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cBx-JN-2dL">
+                                <rect key="frame" x="32" y="617" width="311" height="42"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <state key="normal" title="Start"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="WFt-yb-ihK" firstAttribute="top" secondItem="oF3-x4-nvL" secondAttribute="bottom" id="2Mf-j2-343"/>
+                            <constraint firstItem="WFt-yb-ihK" firstAttribute="leading" secondItem="yja-W3-dGF" secondAttribute="leadingMargin" id="5hv-RS-3qU"/>
+                            <constraint firstItem="XSF-z5-ZHo" firstAttribute="top" secondItem="cBx-JN-2dL" secondAttribute="bottom" constant="8" id="IOB-dG-xbo"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="WFt-yb-ihK" secondAttribute="trailing" id="TL7-XQ-AuO"/>
+                            <constraint firstItem="XSF-z5-ZHo" firstAttribute="top" secondItem="WFt-yb-ihK" secondAttribute="bottom" id="b8P-p0-m55"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="cBx-JN-2dL" secondAttribute="trailing" constant="16" id="lV7-It-8BF"/>
+                            <constraint firstItem="cBx-JN-2dL" firstAttribute="leading" secondItem="yja-W3-dGF" secondAttribute="leadingMargin" constant="16" id="wh7-Y2-cM9"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UQJ-lM-q8v" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="822" y="36"/>
         </scene>
     </scenes>
 </document>
